# customs-clearance

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_BACKEND_ANALYSIS.md  RAILWAY_WEB_DEPLOYMENT_GUIDE.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  docker-compose.production.yml  docker-compose.yml  nixpacks.toml  railway.toml
application-tier/: CURL_TEST_GUIDE.md
application-tier/ai-gateway/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  production_model_registry_example.py  pyproject.toml  requirements.txt  test_requirements.txt
application-tier/ai-gateway/app/: __init__.py
application-tier/ai-gateway/app/core/: config.py  logging.py  middleware.py
application-tier/ai-gateway/app/routers/: ai_gateway.py  chatbot_integration.py  health.py  hs_code_integration.py  models.py  ocr_integration.py  pipeline.py  report_integration.py
application-tier/ai-gateway/app/schemas/: common.py  gateway.py  models.py
application-tier/ai-gateway/tests/: __init__.py  test_docker_integration.py  test_integration.py
application-tier/models/model-chatbot/: .env.docker  README-ChromaDB-Docker.md  README_CLI.md  WholeProject.md  analyze_data_distribution.py  chunking general info csv to json.md  debug_strawberry_data.py  debug_vector_db.py  main.py  pyproject.toml  quick_langgraph_test.py  requirements.txt  test_chromadb_query.py  test_cli_e2e.py  test_docker_chromadb.py  test_dual_agent_strawberry.py  test_fixed_langgraph.py  test_improved_search.py  test_langchain_migration.py  test_langgraph_integration.py  test_retriever_fix.py  test_trade_retriever_fix.py
application-tier/models/model-chatbot-fastapi/: .dockerignore  .dockerignore.cloudrun  .env.example  .env.local.example  Dockerfile  Dockerfile.cloudrun  Dockerfile.railway  RAILWAY_DATABASE_SETUP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_POSTGRES_RESEARCH.md  README.md  docker-compose.yml  docker-compose.yml.backup  erd.md  main.py  pyproject.railway.toml  pyproject.toml  quick_init.py  railway.toml  test_main.py
application-tier/models/model-chatbot-fastapi/app/core/: database.py  langgraph_integration.py
application-tier/models/model-chatbot-fastapi/app/models/: conversation.py
application-tier/models/model-chatbot-fastapi/app/rag/: __init__.py  consultation_case_agent.py  embeddings.py  langgraph_factory.py  langgraph_orchestrator.py  law_agent.py  law_retriever.py  query_normalizer.py  query_router.py  trade_info_retriever.py  trade_regulation_agent.py  vector_store.py  vector_store_original.py
application-tier/models/model-chatbot-fastapi/app/routers/: conversations.py  data_initialization.py  progress.py
application-tier/models/model-chatbot-fastapi/app/services/: conversation_service.py
application-tier/models/model-chatbot-fastapi/app/utils/: config.py  database_init.py
application-tier/models/model-chatbot-fastapi/config/pgadmin/: servers.json
application-tier/models/model-chatbot-fastapi/scripts/: README_DATABASE.md  backup.sh  fix_metadata_columns.py  initialize_db.py  restore.sh  setup_database.py
application-tier/models/model-chatbot-fastapi/tests/: test_basic.py  test_integration.py
application-tier/models/model-chatbot/examples/: trade_info_example.py
application-tier/models/model-chatbot/scripts/: process_documents.py
application-tier/models/model-chatbot/src/data_processing/: __init__.py  law_chunking_utils.py  law_document_loader.py  pdf_chunking_utils.py  pdf_processor.py
application-tier/models/model-chatbot/src/rag/: README.md  __init__.py  consultation_case_agent.py  langgraph_factory.py  langgraph_orchestrator.py  law_agent.py  law_data_processor.py  law_retriever.py  query_router.py  trade_info_retriever.py  trade_regulation_agent.py  unified_cli.py  vector_store.py
application-tier/models/model-chatbot/src/utils/: __init__.py  config.py  file_utils.py
application-tier/models/model-hscode/: .env.example  API_DOCS.md  Dockerfile  Dockerfile.test  Dockerfile.us-convert  RAILWAY_INDIVIDUAL_DEPLOYMENT.md  README-CLOUDRUN.md  README.md  cloudrun-hscode-recommend.yaml  cloudrun-us-convert.yaml  config.py  deploy-cloudrun.sh  deployment-recommend.yaml  deployment-us-convert.yaml  docker-compose.yml  main.py  main_cli.py  pvc.yaml  pyproject.toml  railway-us-convert.toml  railway.toml  requirements.txt  run_server.py  run_service.py  run_ui.py  test_simple_app.py  ui_app.py
application-tier/models/model-hscode/app/: README_API.md  __init__.py  main.py  requirements.txt  requirements_minimal.txt
application-tier/models/model-hscode/app/api/v1/: api.py
application-tier/models/model-hscode/app/api/v1/endpoints/: __init__.py  cache.py  health.py  recommend.py  search.py
application-tier/models/model-hscode/app/core/: config.py  recommender.py
application-tier/models/model-hscode/app/schemas/: __init__.py  request.py  response.py
application-tier/models/model-hscode/cache/hs_code_cache/: cache_metadata.json  chapter_descriptions.pkl  integrated_df.pkl  mappings.pkl  semantic_embeddings.npy  tfidf_matrix.pkl  tfidf_vectorizer.pkl
application-tier/models/model-hscode/data/: 관세청_HSK별 신성질별_성질별 분류_20250101.xlsx  관세청_HS부호_2025.csv
application-tier/models/model-hscode/docs/: CLAUDE.md
application-tier/models/model-hscode/src/: cache_manager.py  data_processor.py  export_integrated_data.py  gradio_us-ks_converter_app.py  hs_recommender.py  search_engine.py  us_ks_hs_converter_service.py  us_main.py  us_to_korea_hs_converter.py
application-tier/models/model-ocr/: Dockerfile  main.py  ocr_requirements.txt  pyproject.toml  requirements.txt
application-tier/models/model-ocr/app/: main.py  ocr_api.py
application-tier/models/model-report/: Dockerfile  __init__.py  client_request.py  main.py  pyproject.toml  report_requirements.txt  requirements.txt  uv_requirements.txt  무역통계부호.json  수입신고서_전체항목정의(v1).json  수출신고서_전체항목정의(v1).json
application-tier/models/model-report/app/: client_request.py  main.py
application-tier/models/model-report/tests/: __init__.py  test_main.py
data-tier/: .env.example  README.md  docker-compose.yml
scripts/: build-all.bat  build-all.sh
(+241 files in other folders)
