[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI Gateway for Korean Customs Clearance System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.1",
    "aiomysql==0.2.0",
    "asyncpg==0.29.0",
    "black==23.11.0",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "httpx==0.25.2",
    "marshmallow==3.20.2",
    "mypy==1.7.1",
    "numpy==1.26.0",
    "pandas==2.1.4",
    "passlib[bcrypt]==1.7.4",
    "pre-commit==3.5.0",
    "prometheus-client==0.19.0",
    "psutil>=7.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "structlog==23.2.0",
    "uvicorn[standard]==0.24.0",
]

[project.scripts]
start = "main:main"
