[project]
name = "hs-code-recommender"
version = "2.1.0"
description = "Korean customs HS code recommendation system using machine learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "sentence-transformers>=2.2.0",
    "torch>=1.12.0",
    "openai>=1.0.0",
    "openpyxl>=3.0.0",
    "transformers>=4.20.0",
    "gradio>=4.0.0",
]

[project.scripts]
hs-recommend = "main:main"
hs-ui = "ui_app:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["hs_code_recommender"]
