[project]
name = "model-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "azure-ai-formrecognizer==3.3.0",
    "azure-common==1.1.28",
    "azure-core==1.29.5",
    "click==8.2.2",
    "coverage==7.3.2",
    "fastapi==0.104.1",
    "h11==0.16.0",
    "httpx==0.27.0",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "pytest==8.2.2",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-httpx==0.32.0",
    "pytest-mock==3.12.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sniffio==1.3.1",
    "starlette==0.27.0",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "uvicorn==0.24.0",
    "yarl==1.20.1",
]
